Add JSpecify annotations, Error Prone and NullAway